static/css/pages/common.css
html, body {
    max-width: 100%;
    
}

.navbar-holder {
  height: 0px;
  position: relative;
}

h1 {
  font-family: Poppins;
  font-size: 1.75rem;
  font-weight: normal;
  text-align: center;
  line-height: normal;
}

.screen-size-segment {
  min-height: 580px;
  max-height: 800px;
  height: 100vh;
}

.small-screen-size-segment {
  min-height: 580px;
  max-height: 650px;
  height: 100vh; 
}

.white-button-blue-border {
  font-size: 1.125rem;
  border-radius: 26px;
  border: solid 1px #007cff;
  padding: 12px 25px;
  color: #007cff;
  background-color: transparent;
  text-align: center;
  font-weight: normal;
}

.video-block {
  position: relative;
  background-color: #061d2a;
  color: white;
  font-family: Lato;
  font-size: 1.125rem;
  font-weight: normal;
}

.video-block .contents {
  z-index: 5;
  margin-bottom: 60px;
}

.video-block .video-title {
  max-width: 320px;
}

.video-block .video-overlay {
  position: absolute;
  z-index: 2;
  width: 100%;
  height: 100%;
  opacity: 0.60;
  background-color: #061d2a; 
}

.video-block .video-overlay.blue {
  opacity: 0.73;
  background-color: #007cff; 
}

.video-block .video-overlay-poster {
  position: absolute;
  z-index: 1;
  bottom: 0px;
  overflow: hidden;
}

.video-block .video-overlay-poster img {
  width: 100%;
  height: 100%;
}

.video-block .video-overlay-gradient {
  position: absolute;
  z-index: 4;
  width: 100%;
  height: 100%;
  background: rgb(0,0,0);
  background: linear-gradient(0deg, rgba(0,0,0,0.7) 21%, rgba(0,0,0,0) 44%);
}

.align-self-center {
  align-self: center
}

.w-201 {
  width: 201px;
}

.w-86 {
  width: 86px;
}

.w-179 {
  width: 179px;
}

.w-140 {
  width: 140px;
}

.w-187 {
  width: 187px;
}

.w-111 {
  width: 111px;
}

.w-205 {
  width: 205px;
}

.w-161 {
  width: 161px;
}

.w-164 {
  width: 164px;
}

.w-114 {
  width: 114px;
}

.w-152 {
  width: 152px;
}

.w-189 {
  width: 189px;
}

/* sm + */
@media (min-width: 576px) {
  .video-block .video-title {
    max-width: 470px;
  }

  h1 {
    font-size: 2.25rem;
  }
}

/* md + */
@media (min-width: 768px) {
  .video-block .video-title {
    max-width: 500px;
  } 
}

/* lg + */
@media (min-width: 992px) {
  .video-block .video-title {
    max-width: 860px;
  } 
}

.mt-8, .my-8 {
  margin-top: 8.375rem!important;
}

.mt-10, .my-10 {
  margin-top: 13.25rem!important;
}

.mt-7, .my-7 {
  margin-top: 5.375rem!important;
}

.mb-6, .my-6 {
  margin-bottom: 4.375rem!important;
}

.mt-6, .my-6 {
  margin-top: 4.375rem!important;
}

.pt-60 {
  padding-top: 3.75rem;
}

.mw-568 {
  max-width: 568px!important;
}

.mw-562 {
  max-width: 562px!important;
}

.mw-220 {
  max-width: 220px!important;
}

.mw-940 {
  max-width: 940px!important;
}

.mw-470 {
  max-width: 470px!important;
}

.mw-460 {
  max-width: 460px!important;
}

.mw-549 {
  max-width: 549px!important;
}

.mw-461 {
  max-width: 461px!important;
}

.mw-298 {
  max-width: 298px!important;
}

@media (min-width: 576px) {
  .mw-sm-298 {
    max-width: 298px!important;
  }

  .mw-sm-568 {
    max-width: 568px!important;
  }
}

@media (min-width: 768px) {
  .mw-md-298 {
    max-width: 298px!important;
  }

  .mw-md-568 {
    max-width: 568px!important;
  } 
}

@media (min-width: 992px) {
  .mw-lg-568 {
    max-width: 568px!important;
  }

  .mw-lg-562 {
    max-width: 562px!important;
  }

  .mw-lg-220 {
    max-width: 220px!important;
  }

  .mw-lg-940 {
    max-width: 940px!important;
  }

  .mw-lg-470 {
    max-width: 470px!important;
  }

  .mw-lg-460 {
    max-width: 460px!important;
  }

  .mw-lg-549 {
    max-width: 549px!important;
  }

  .mw-lg-461 {
    max-width: 461px!important;
  }

  .nav .nav-link.selected {
    border-bottom: 2px solid var(--blue);
  }
}

